--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,8 @@ project(${PROJECT_NAME})
 get_filename_component(PARENT_DIR ../ ABSOLUTE)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17 -g")
+# For our vim setup's YCM plugin to work
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include_directories(
     "src"
