Started buffers' desktop implementation + all sorts of other stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ include_directories(
 
 file(GLOB SRC_FILES
     platypus/core/*.cpp
+    platypus/utils/*.cpp
     platypus/core/platform/${BUILD_TARGET}/*.cpp
     platypus/graphics/platform/${BUILD_TARGET}/*.cpp
 )
