--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ file(GLOB SRC_FILES
     platypus/utils/*.cpp
     platypus/core/platform/${BUILD_TARGET}/*.cpp
     platypus/graphics/platform/${BUILD_TARGET}/*.cpp
+
+    platypus/graphics/renderers/*.cpp
 )
 
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
