Added web implementation for Window and Context. Started adding WebInputManager.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Dirs included by all build types
 set(PROJECT_INCLUDES ${PARENT_DIR})
 
+set(SRC_FILES
+    src/Main.cpp
+)
+
 if(${BUILD_TARGET} MATCHES "desktop")
+    add_compile_definitions(PLATYPUS_BUILD_DESKTOP=1)
     list(
         APPEND PROJECT_INCLUDES
         ${PARENT_DIR}/dependencies/glfw/include
@@ -22,6 +27,38 @@ if(${BUILD_TARGET} MATCHES "desktop")
     add_library(platypus SHARED IMPORTED)
     set_property(TARGET platypus PROPERTY IMPORTED_LOCATION "${PARENT_DIR}/build/libplatypus.so")
 elseif(${BUILD_TARGET} MATCHES "web")
+    add_compile_definitions(PLATYPUS_BUILD_WEB=1)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_FREETYPE=1 -fexceptions")
+    set(CMAKE_EXECUTABLE_SUFFIX .html)
+    set(HTML_SHELL_LOCATION "${PROJECT_SOURCE_DIR}/shell.html")
+    # NOTE: This gets converted to camel case for some reason...
+    # NOTE: html_out becomes the PROJ_NAME for some reason... was too afraid to delete it from here since
+    # Emscripten recommends using the -o out.html
+    set(HTML_OUT "test.html")
+
+    set(ADDITIONAL_LINK_FLAGS "-fexceptions -sMIN_WEBGL_VERSION=2 -sMAX_WEBGL_VERSION=2 -o ${HTML_OUT} --shell-file ${HTML_SHELL_LOCATION} -sFORCE_FILESYSTEM --use-preload-plugins -sFETCH -sALLOW_MEMORY_GROWTH -l websocket.js")
+
+    # NOTE: Engine source is included as a part of the web build
+    # -> specify all engine files here
+    list(APPEND SRC_FILES
+        ${PARENT_DIR}/platypus/core/Debug.cpp
+
+        ${PARENT_DIR}/platypus/core/Window.h
+        ${PARENT_DIR}/platypus/core/platform/${BUILD_TARGET}/*.cpp
+
+        ${PARENT_DIR}/platypus/graphics/Context.h
+        ${PARENT_DIR}/platypus/graphics/platform/${BUILD_TARGET}/*.cpp
+
+
+        #${PARENT_DIR}/platypus/ecs/components/*.cpp
+        #${PARENT_DIR}/platypus/utils/*.cpp
+
+        #${PARENT_DIR}/platypus/assets/*.cpp
+        #${PARENT_DIR}/platypus/assets/platform/${BUILD_TARGET}/*.cpp
+
+        #${PARENT_DIR}/platypus/graphics/platform/${BUILD_TARGET}/*.cpp
+        #${PARENT_DIR}/platypus/graphics/renderers/*.cpp
+    )
 else()
     message(FATAL_ERROR "No build target specified")
     return()
@@ -31,11 +68,12 @@ include_directories(
     ${PROJECT_INCLUDES}
 )
 
-file(GLOB SRC_FILES
-    "src/*.cpp"
+file(
+    GLOB USE_SRC_FILES
+    ${SRC_FILES}
 )
 
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+add_executable(${PROJECT_NAME} ${USE_SRC_FILES})
 set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS ${ADDITIONAL_LINK_FLAGS})
 
 if(${BUILD_TARGET} MATCHES "desktop")
