--- a/tests/nginx.conf
+++ b/tests/nginx.conf
@@ -3,7 +3,7 @@ server {
 
     location / {
         root /usr/src/app/;
-        index build.html;
+        index test.html;
 
         # kill cache
         add_header Last-Modified $date_gmt;
