Put viewMatrix from camera's inversed transformation matrix into rendering. Added CameraController.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ file(GLOB SRC_FILES
 
     platypus/ecs/components/*.cpp
     platypus/utils/*.cpp
+    platypus/utils/controllers/*.cpp
 
     platypus/assets/*.cpp
     platypus/assets/platform/${BUILD_TARGET}/*.cpp
