--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ project(${PROJECT_NAME})
 # Need to have absolute dirs so we cannot use '../' to get the engine directory here!
 get_filename_component(PARENT_DIR ../ ABSOLUTE)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17 -O3")
 # For my vim setup's YCM plugin to work
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -22,7 +22,7 @@ if(${BUILD_TARGET} MATCHES "desktop")
         APPEND PROJECT_INCLUDES
         ${PARENT_DIR}/dependencies/glfw/include
     )
-    set(ADDITIONAL_LINK_FLAGS "-g")
+    set(ADDITIONAL_LINK_FLAGS "-g -O3")
     add_library(platypus SHARED IMPORTED)
     set_property(TARGET platypus PROPERTY IMPORTED_LOCATION "${PARENT_DIR}/build/libplatypus.so")
 elseif(${BUILD_TARGET} MATCHES "web")
