Added Font asset. Added Freetype and Harfbuzz as submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "dependencies/VulkanMemoryAllocator"]
 	path = dependencies/VulkanMemoryAllocator
 	url = git@github.com:GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
+[submodule "dependencies/freetype"]
+	path = dependencies/freetype
+	url = git@github.com:freetype/freetype.git
+[submodule "dependencies/harfbuzz"]
+	path = dependencies/harfbuzz
+	url = git@github.com:harfbuzz/harfbuzz.git
