--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ include_directories(
     "dependencies/stb"
     "dependencies/json"
     "dependencies/tinygltf"
+    "dependencies/freetype/include"
 )
 
 file(GLOB SRC_FILES
@@ -53,9 +54,13 @@ file(GLOB SRC_FILES
 
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
-# TODO: Some flag to build looking all libs from current dir for "shipping"
+# TODO: Some flag to build looking all libs from current dir for "shipping"?
 add_library(glfw SHARED IMPORTED)
 set_property(TARGET glfw PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/dependencies/glfw/build/src/libglfw.so.3.5")
+
+add_library(freetype SHARED IMPORTED)
+set_property(TARGET freetype PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/dependencies/freetype/objs/.libs/libfreetype.so")
+
 # Below so much more nice, but the issue with licences and static linking?
 # add_subdirectory(dependencies/glfw)
 
@@ -66,4 +71,4 @@ set(VMA_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/dependencies/VulkanMemoryAllocator/in
 #set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-O3")
 target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIRS} ${VMA_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE glfw Vulkan::Vulkan)
+target_link_libraries(${PROJECT_NAME} PRIVATE glfw Vulkan::Vulkan freetype)
