--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17 -g")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Dirs included by all build types
-set(PROJECT_INCLUDES ${PARENT_DIR})
+set(PROJECT_INCLUDES "${PARENT_DIR}")
 
 set(SRC_FILES
     src/*.cpp
