--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,17 @@ else()
 endif()
 
 
-# -g to to use gdb debugger
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17 -g")
 # For our vim setup's YCM plugin to work
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_compile_definitions(PLATYPUS_DEBUG=1)
+add_compile_definitions(
+    PLATYPUS_DEBUG=1
+)
+
+# -g to to use gdb debugger
+add_compile_options(
+    -Wall -std=c++17 -g
+)
 
 if(${BUILD_TARGET} MATCHES "desktop")
     add_compile_definitions(PLATYPUS_BUILD_DESKTOP=1)
@@ -67,8 +72,6 @@ set_property(TARGET freetype PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/d
 find_package(Vulkan REQUIRED)
 set(VMA_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/dependencies/VulkanMemoryAllocator/include")
 
-
-#set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-O3")
 target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIRS} ${VMA_INCLUDE_DIR})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE glfw Vulkan::Vulkan freetype)
