Optimized web rendering by dynamically creating VAOs for meshes when necessary and binding those instead of the whole mess before. Not perfect system but seems to speed the shit up a little

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -63,6 +63,8 @@ elseif(${BUILD_TARGET} MATCHES "web")
         ${PARENT_DIR}/platypus/graphics/*.cpp
         ${PARENT_DIR}/platypus/graphics/platform/${BUILD_TARGET}/*.cpp
         ${PARENT_DIR}/platypus/graphics/renderers/*.cpp
+
+        ${PARENT_DIR}/platypus/ui/*.cpp
     )
 else()
     message(FATAL_ERROR "No build target specified")
