Changed a ModelLoading a little. Started adding skinning and animation loading from gltf files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,7 +30,7 @@ if(${BUILD_TARGET} MATCHES "desktop")
     add_library(platypus SHARED IMPORTED)
     set_property(TARGET platypus PROPERTY IMPORTED_LOCATION "${PARENT_DIR}/build/libplatypus.so")
 elseif(${BUILD_TARGET} MATCHES "web")
-    add_compile_definitions(PLATYPUS_BUILD_WEB=1)
+    add_compile_definitions(PLATYPUS_BUILD_WEB=1 PLATYPUS_DEBUG=1)
     list(
         APPEND PROJECT_INCLUDES
         ${PARENT_DIR}/dependencies/stb
@@ -55,6 +55,7 @@ elseif(${BUILD_TARGET} MATCHES "web")
 
         ${PARENT_DIR}/platypus/ecs/components/*.cpp
         ${PARENT_DIR}/platypus/utils/*.cpp
+        ${PARENT_DIR}/platypus/utils/modelLoading/*.cpp
         ${PARENT_DIR}/platypus/utils/controllers/*.cpp
 
         ${PARENT_DIR}/platypus/assets/*.cpp
