Got small animation test working. Still quite a lot of work to do!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ file(GLOB SRC_FILES
     platypus/core/platform/${BUILD_TARGET}/*.cpp
 
     platypus/ecs/components/*.cpp
+    platypus/ecs/systems/*.cpp
     platypus/utils/*.cpp
     platypus/utils/modelLoading/*.cpp
     platypus/utils/controllers/*.cpp
