Fixed material pipeline thing for now. There's still issue with creating descriptor sets if assigning Material for renderable after Scene's init()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ add_compile_definitions(
 
 # -g to to use gdb debugger
 add_compile_options(
-    -Wall -std=c++17 -g -fsanitize=address
+    -Wall -std=c++17 -g
 )
 
 if(${BUILD_TARGET} MATCHES "desktop")
