--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,14 +6,12 @@ project(${PROJECT_NAME})
 # Need to have absolute dirs so we cannot use '../' to get the engine directory here!
 get_filename_component(PARENT_DIR ../ ABSOLUTE)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17 -g")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_compile_options(
-    -Wall -std=c++17 -g
+    -Wall -g
 )
 set(ADDITIONAL_LINK_FLAGS " ")
-
-# For my vim setup's YCM plugin to work
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Dirs included by all build types
 set(PROJECT_INCLUDES "${PARENT_DIR}")
