--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ get_filename_component(PARENT_DIR ../ ABSOLUTE)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_compile_options(
-    -Wall
+    -Wall -g
 )
 set(ADDITIONAL_LINK_FLAGS " ")
 
@@ -28,7 +28,7 @@ if(${BUILD_TARGET} MATCHES "desktop")
     add_library(platypus SHARED IMPORTED)
     set_property(TARGET platypus PROPERTY IMPORTED_LOCATION "${PARENT_DIR}/build/libplatypus.so")
 elseif(${BUILD_TARGET} MATCHES "web")
-    add_compile_definitions(PLATYPUS_BUILD_WEB=1)
+    add_compile_definitions(PLATYPUS_BUILD_WEB=1 PLATYPUS_DEBUG=1)
     list(
         APPEND PROJECT_INCLUDES
         ${PARENT_DIR}/dependencies/stb
