Fixed unicode string issue (at least for the most part). Added utfcpp dependency for handling utf8 strings of varying character sizes. Stopped using the problematic wstrings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ include_directories(
     "dependencies/json"
     "dependencies/tinygltf"
     "dependencies/freetype/include"
+    "dependencies/utfcpp"
 )
 
 file(GLOB SRC_FILES
