--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ elseif(${BUILD_TARGET} MATCHES "web")
         ${PARENT_DIR}/dependencies/stb
         ${PARENT_DIR}/dependencies/json
         ${PARENT_DIR}/dependencies/tinygltf
+        ${PARENT_DIR}/dependencies/utfcpp
     )
     # NOTE: Below doesn't work if using add_compile_options() instead! ...for some reason...
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_FREETYPE=1 -fexceptions -O3")
