--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,11 @@ endif()
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_compile_options(
-    -Wall -O3
+    -Wall -g
 )
 
 add_compile_definitions(
+    PLATYPUS_DEBUG=1
     PLATYPUS_BUILD_DESKTOP=1
 )
 
