Started figuring out threading stuff...

--- a/tests/nginx.conf
+++ b/tests/nginx.conf
@@ -11,6 +11,10 @@ server {
         if_modified_since off;
         expires off;
         etag off;
+
+        # Testing pthreads with Emscripten, which requires enabling COOP and COEP policies?
+        add_header Cross-Origin-Opener-Policy "same-origin" always;
+        add_header Cross-Origin-Embedder-Policy "require-corp" always;
     }
 
     # location /static/ {
